--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-resizable-panels": "^2.0.19",
     "tailwind-merge": "^2.3.0",
