--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -22,6 +22,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-resizable-panels": "^2.0.19",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
